<resources>
    <string name="app_name">বায়োফ্লক অ্যাপ</string>
    <string name="app_bar">বায়োফ্লক</string>
    <string name="dboard_item_1">মাছ চাষের বিস্তারিত</string>
    <string name="dboard_item_2">প্রয়োজনীয় যন্ত্রপাতি </string>
    <string name="dboard_item_3">ক্যালকুলেশন</string>
    <string name="dboard_item_4"> ভিডিও </string>
    <string name="dboard_item_5">পোনা প্রাপ্তির স্থান</string>
    <string name="dboard_item_6">মাছের খাদ্য প্রাপ্তির স্থান</string>
    <string name="dboard_item_7">মাছ বিক্রির স্থান</string>

    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile No</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already Registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full Name</string>
    <string name="prefLoginState">loginstate</string>
    <string name="dq1">বায়োফ্লক কি ? </string>
    <string name="da1"><b>বায়োফ্লক</b> হচ্ছে সাশ্রয়ী এবং টেকসই মাছ চাষের নতুন এবং আধুনিক পদ্ধতি। যাতে নাইট্রেট, নাইট্রাইট,
অ্যামনিয়ার মতো বিষাক্ত পদার্থগুলিকে প্রােটিন সেলে রুপান্তর এবং মাছের খাবার হিসেবে ব্যবহার হয় বিধায়
মাছের খাবার খরচ ২০ % কম লাগে। \n এটি অল্প পানিতে অধিক ঘনত্বে মাছ চাষ, শূণ্য পানি ড্রেনেজ এবং ঘরের
ভিতরে মাছ চাষের একটি পদ্ধতি। \n
        আরও সহজ ভাবে বলতে হয় এটি একটি বজ্য পানি শােধন ব্যবস্থা। যেখানে
প্রয়ােজনীয় ব্যকটেরিয়া ফিস ট্যাংকে ছাড়া থাকে এবং প্রয়ােজনীয় কার্বোহাইড্রেট উৎস (গুড়, মােলাসিস) যােগ
করার মাধ্যমে উচ্চ কোষের মাইক্রোবিয়াল প্রােটিন উৎপাদনের মাধ্যমে জলের গুনমান উন্নত হয়। \n যদিও এটি বহু
বছর আগে থেকে পুকুরে চাষাবাদ হয়ে আসছে। কিন্তু এটিকে আধুনিক রূপ দেন <b>yoram avnimelech</b> নামের
একজন মৎস বিজ্ঞানী।
\n \n
\u25BA এলগি, প্রােটোজোয়া, ফাইটোপ্লাংটন, জুয়ােপ্লাংটন এবং ব্যাকটেরিয়া এরা সবাই একসাথে
কোলােনি বা বাসা বেধে জোট এর মত থাকে।
\n\n
\u25BA কোলােনির সাথে কিছু অর্গানিক বস্তুও থাকে। বায়ােফ্রক সম্পর্কিত ব্যাকটেরিয়া গুলােকে Good বা উপকারী ব্যাকটেরিয়া বলা হয়। এরা
এরােবিক এবং নন এরােবিক এই দুই অবস্থাতেও বেঁচে থাকতে পারে। এদের মধ্যেকার আকর্ষন
পদ্ধতিকে ইলেকট্রো স্ট্যাটিক আকর্ষন পদ্ধতি বলে। ফ্রক তৈরীতে এই পদ্ধতিকে মুলত এরা কাজে
লাগায়। এরা দেহ থেকে মিউকাজ জাতীয় এক ধরনের পিচ্ছিল পদার্থ তৈরী করে। যা কোলােনি
বাধতে সহায়ক ভূমিকা পালন করে। \n\n

\u25BA ফ্লক এর আকৃতি বা সাইজ ৫০ হতে ২০০ মাইক্রোন পর্যন্ত হয়।\n\n
        \u25BA বায়ােমাস থেকে এসিমুলেশন পদ্ধতিতে ব্যাকটেরিয়া গুলি এমােনিয়া খেয়ে ফেলার পরে
বায়ােমাসে ২৫ থেকে ৫০ % পর্যন্ত শুষ্ক প্রােটিন থাকে। On an avg এতে ৩০ -৫০ % পর্যন্ত
প্রােটিন বিদ্যমান থাকে এবং কিছু পরিমাণ ফ্যাট ও থাকে (০.৫-১৫ %) বস্তুত ১-৫ % অধিক
থাকে। মিনারেল ভিটামিন, ফসফরাস ও থাকে। \n\n
\u25BA সুতরাং নিম্ন প্রােটিন যুক্ত (১৮-২০ %) ভাসমান খাদ্য বাজার থেকে কিনলেও চলে।</string>
</resources>
