<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_animation">
    <LinearLayout
        android:id="@+id/dash_animation"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical"
        android:gravity="center"
       >
        <ImageView
            android:layout_width="110dp"
            android:layout_height="90dp"
            android:src="@drawable/details"
            android:layout_gravity="center"
            ></ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_login"

            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/mobileno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_register_hint" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Radiogrp">
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Male"
                android:text=" Male"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:buttonTint="@color/colorPrimaryDark"/>
            <RadioButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Female"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginBottom="10dp"
                android:text=" Female"

                android:textColor="@color/input_register"
                android:buttonTint="@color/colorPrimaryDark"/>

        </RadioGroup>
        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>